--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             ./images/image-product-mobile.jpg  686w,
             ./images/image-product-desktop.jpg 600w
           "
-          sizes="(min-width:768px) 600w,
-                    680w"
+          sizes="(min-width:768px) 600px,
+                    680px"
           src="./images/image-product-mobile.jpg"
           alt=""
           class="flex-1 self-stretch"
