--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="flex items-center justify-center min-h-screen py-8">
       <!-- Card -->
       <div
-        class="flex flex-col md:flex-row w-[90%] border-none rounded-xl overflow-hidden md:grid md:grid-cols-2 md:max-w-2xl"
+        class="flex flex-col w-[90%] border-none rounded-xl overflow-hidden md:grid md:grid-cols-2 md:max-w-2xl md:grid-row-1"
       >
         <!-- Image -->
         <!-- <div
@@ -49,9 +49,9 @@
           "
           sizes="(min-width:768px) 600px,
                     680px"
-          src="./images/image-product-mobile.jpg"
+          src="./images/image-product-desktop.jpg"
           alt=""
-          class="flex-1 self-stretch"
+          class="flex-1 h-full"
         />
         <!-- content -->
         <div class="py-5 px-7 flex flex-col flex-1 bg-white space-y-3">
@@ -60,7 +60,9 @@
           >
             Perfume
           </p>
-          <h1 class="text-3xl font-fraunces font-bold text-varyDarkBlue">
+          <h1
+            class="text-3xl font-fraunces font-bold text-varyDarkBlue md:text-5xl"
+          >
             Gabrielle Essence Eau De Parfum
           </h1>
           <!-- Description -->
